--- a/sshkit.yaml
+++ b/sshkit.yaml
@@ -1,4 +1,20 @@
 proxies:
+  - name: us-lb.sshkit.org
+    server: 104.22.25.131
+    port: 80
+    type: vmess
+    uuid: 6fea1649-425b-4092-bf53-29792152c925
+    alterId: 0
+    cipher: auto
+    tls: false
+    skip-cert-verify: true
+    servername: us-lb.sshkit.org
+    network: ws
+    ws-opts:
+      path: /sshkit/Mamam/64582dd7088ad/
+      headers:
+        Host: us-lb.sshkit.org
+    udp: true
   - name: opentunnel.net-dyhfhxhh
     server: 104.22.25.131
     port: 80
