--- a/sshkit.yaml
+++ b/sshkit.yaml
@@ -1,4 +1,19 @@
  proxies:
+  - name: opentunnel.net-stupidopentunnel
+    server: 104.22.25.131
+    port: 80
+    type: vmess
+    uuid: a40d34c6-b77c-4648-9210-3e8d2f4226b5
+    alterId: 16
+    cipher: auto
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /u/opentunnel.net-stupidopentunnel
+      headers:
+        Host: auv-1.openv2ray.com
+    udp: true
   - name: opentunnel.net-jfjfufucuf
     server: 104.22.25.131
     port: 80
