--- a/sshkit.yaml
+++ b/sshkit.yaml
@@ -1,4 +1,20 @@
  proxies:
+  - name: us-lb.sshkit.org
+    server: 104.22.25.131
+    port: 80
+    type: vmess
+    uuid: 6fea1649-425b-4092-bf53-29792152c925
+    alterId: 0
+    cipher: auto
+    tls: false
+    skip-cert-verify: true
+    servername: us-lb.sshkit.org
+    network: ws
+    ws-opts:
+      path: /sshkit/Mamamamam/647095eb61983/
+      headers:
+        Host: us-lb.sshkit.org
+    udp: true
   - name: opentunnel.net-stupidopentunnel
     server: 104.22.25.131
     port: 80
@@ -44,20 +60,4 @@
       path: GET-:ws://104.22.25.131/9u6invgp
       headers:
         Host: us-14.0rd.net
-    udp: true
-  - name: us-lb.sshkit.org 22 mei
-    server: 104.22.25.131
-    port: 80
-    type: vmess
-    uuid: 6fea1649-425b-4092-bf53-29792152c925
-    alterId: 0
-    cipher: auto
-    tls: false
-    skip-cert-verify: false
-    servername: us-lb.sshkit.org
-    network: ws
-    ws-opts:
-      path: /sshkit/Mamama/646181e193824/
-      headers:
-        Host: us-lb.sshkit.org
     udp: true
