--- a/sshkit.yaml
+++ b/sshkit.yaml
@@ -1,4 +1,20 @@
  proxies:
+  - name: erwin WS (CDN) NTLS 26 Juni
+    server: 104.22.25.131
+    port: 80
+    type: vmess
+    uuid: 979b1789-3c55-495e-90ed-14911bc326de
+    alterId: 0
+    cipher: auto
+    tls: false
+    skip-cert-verify: true
+    servername: warungvpn.hitsssh.com
+    network: ws
+    ws-opts:
+      path: GET-:ws://104.22.25.131/vmess
+      headers:
+        Host: warungvpn.hitsssh.com
+    udp: true
   - name: sshocean-samsaabah
     server: 104.22.25.131
     port: 80
