--- a/sshkit.yaml
+++ b/sshkit.yaml
@@ -63,21 +63,21 @@
       headers:
         Host: melbi2.myserver-prem.cloud
     udp: true
-  - name: us-lb.sshkit.org
-    server: 104.22.25.131
+  - name: trojanxl
+    server: 104.18.2.198
     port: 80
-    type: vmess
-    uuid: 6fea1649-425b-4092-bf53-29792152c925
+    type: trojan
+    uuid: dc6531c8-0933-45c3-a7b7-36ecb8cc1c9f
     alterId: 0
     cipher: auto
     tls: false
     skip-cert-verify: true
-    servername: us-lb.sshkit.org
+    servername: id-qw1.estebuh.my.id
     network: ws
     ws-opts:
       path: /sshkit/Mamamamam/647095eb61983/
       headers:
-        Host: us-lb.sshkit.org
+        Host: id-qw1.estebuh.my.id
     udp: true
   - name: opentunnel.net-stupidopentunnel
     server: 104.22.25.131
