--- a/sshkit.yaml
+++ b/sshkit.yaml
@@ -125,19 +125,20 @@
       headers:
         Host: us-14.0rd.net
     udp: true
-  - name: support.udemy.com
-    server: support.udemy.com
-    port: 443
-    type: trojan
-    password: 7d7002a0-3cdc-11ee-803a-1239d0255272
-    alterId: 16
-    cipher: auto
-    tls: false
-    skip-cert-verify: true
-    sni: sg6-trojan.bonds.id
-    network: ws
-    ws-opts:
-      path: /howdy
-      headers:
-        Host: sg6-trojan.bonds.id
+  - name: Trojan-GO
+	   type: trojan
+	   server: 104.21.12.204
+	   port: 443
+	   password: c0db0007-ab2c-4c38-89ae-8236386c6be3
+	   network: trojan
+	   sni: 104.21.12.204
+	   skip-cert-verify: true 
+	   unified-delay: true
+	   servername: rjm-viprext.my.id
+	   tls: true
+	   udp: true
+	   ws-opts:
+		   path: /hidessh-trojan
+		   headers:
+			   Host: rjm-viprext.my.id
     udp: true
