--- a/sshkit.yaml
+++ b/sshkit.yaml
@@ -127,11 +127,11 @@
     udp: true
   - name: Trojan-GO
     type: trojan
-    server: rjm-viprext.my.id
+    server: 104.22.24.131
     port: 443
     password: c0db0007-ab2c-4c38-89ae-8236386c6be3
     network: trojan
-    sni: 104.22.24.131
+    sni: rjm-viprext.my.id
     skip-cert-verify: true 
     unified-delay: true
     servername: rjm-viprext.my.id
