--- a/sshocean.yaml
+++ b/sshocean.yaml
@@ -1,17 +1,32 @@
 proxies:
-  - name: sshocean-melbi3-9-Feb
-    server: 104.26.7.171
-    port: 80
-    type: vmess
-    uuid: 999b14f4-f2c3-482f-878d-10b929283384
-    alterId: 0
-    cipher: auto
-    tls: false
-    skip-cert-verify: true
-    servername: sg3-mlb.v2rayserv.com
-    network: ws
-    ws-opts:
-      path: GET-:ws://104.26.7.171/vmess
-      headers:
-        Host: sg3-mlb.v2rayserv.com
-    udp: true
+  - name: Trojan-GO
+  type: trojan
+  server: 104.22.24.131
+  port: 443
+  password: c0db0007-ab2c-4c38-89ae-8236386c6be3
+  network: trojan-go
+  sni: rjm-viprext.my.id
+  skip-cert-verify: true 
+  unified-delay: true
+  servername: rjm-viprext.my.id
+  tls: true
+  udp: true
+  ws-opts:
+     path: /xxxxxxxxxxxx
+     headers:
+       Host: rjm-viprext.my.id
+  interface-name: eth1
+
+  - name: NEW FORMAT
+  type: trojan
+  server: 104.22.24.131
+  port: 443
+  password: c0db0007-ab2c-4c38-89ae-8236386c6be3
+  udp: true
+  sni: rjm-viprext.my.id
+  alpn:
+  - http/1.1
+  skip-cert-verify: true
+  network: ws
+  ws-opts:
+    path: "/trojan"
